[package]
name = "linkfinder"
version = "0.1.0"
authors = ["Orin Serimon <orin220444@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "*"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
